v1.4/markdown/asct-b/asct-b-vh-skin.md
# Anatomical Structures, Cell Types, plus Biomarkers (ASCT+B) table for Skin v1.2

### Description
[Anatomical Structures, Cell Types, plus Biomarkers (ASCT+B) tables](https://humanatlas.io/asctb-tables) aim to capture the nested *part_of* structure of anatomical human body parts, the typology of cells, and biomarkers used to identify cell types. The tables are authored and reviewed by an international team of experts.

| Label | Value |
| :------------- |:-------------|
| **Creator(s):** | Fiona Ginty; Jonhan Ho; Joel Sunshine |
| **Creator ORCID(s):** | [0000-0001-6638-683X](https://orcid.org/0000-0001-6638-683X); [0000-0002-1134-8585](https://orcid.org/0000-0002-1134-8585); [0000-0001-9987-6712](https://orcid.org/0000-0001-9987-6712) |
| **Project Lead:** | Katy B&ouml;rner |
| **Project Lead ORCID:** | [0000-0002-3321-6137](https://orcid.org/0000-0002-3321-6137) |
| **Reviewer(s):** | Lou Falo; Muzlifah A. Haniffa; Hemali Phatnani; David M. Owens; Ellen M. Quardokus   |
| **Reviewer ORCID(s):** | [0000-0001-9813-0433](https://orcid.org/0000-0001-9813-0433); [0000-0002-3927-2084](https://orcid.org/0000-0002-3927-2084); [0000-0002-6571-3891](https://orcid.org/0000-0002-6571-3891); [0000-0003-0297-4370](https://orcid.org/0000-0003-0297-4370); [0000-0001-7655-4833](https://orcid.org/0000-0001-7655-4833) |
| **Creation Date:** | 2022-05-06 |
| **License:** | Creative Commons Attribution 4.0 International ([CC BY 4.0](https://creativecommons.org/licenses/by/4.0/)) |
| **Publisher:** | HuBMAP |
| **Funder:** | National Institutes of Health |
| **Award Number:** | OT2OD026671 |
| **HuBMAP ID:** | HBM725.JHNS.532 |
| **Data Table:** | [Skin v1.2](https://hubmapconsortium.github.io/ccf-releases/v1.2/asct-b/ASCT-B_VH_Skin.csv)  |
| **DOI:** | [https://doi.org/10.48539/HBM725.JHNS.532](https://doi.org/10.48539/HBM725.JHNS.532) |
| **How to Cite This Data Table:** | Fiona Ginty; Jonhan Ho; Joel Sunshine, HuBMAP ASCT+B Tables. Skin v1.1 [https://doi.org/10.48539/HBM725.JHNS.532](https://doi.org/10.48539/HBM725.JHNS.532) |
| **How to Cite ASCT+B Tables Overall:** | Quardokus, Ellen, Bruce W. Herr II, Lisel Record, Katy B&ouml;rner. 2021. [*HuBMAP ASCT+B Tables*](https://humanatlas.io/asctb-tables). Accessed on May 6, 2022 |
