v2.0/markdown/asct-b/asct-b-vh-skin.md
# Anatomical Structures, Cell Types, plus Biomarkers (ASCT+B) table for Skin v1.3

### Description
[Anatomical Structures, Cell Types, plus Biomarkers (ASCT+B) tables](https://humanatlas.io/asctb-tables) aim to capture the nested *part_of* structure of anatomical human body parts, the typology of cells, and biomarkers used to identify cell types. The tables are authored and reviewed by an international team of experts.

This table includes the major cell types in skin and the biomarkers that have been commonly used to identify those cell types. The references have primarily focused on protein expression in human tissues as this is the focus of the current HuBMAP skin project 5UH3CA246594-02. Further cell types can be delineated with additional protein and RNA markers. Similarly, just a few functional markers are included (Ki67, DDB2, p53), but it is foreseeable that many more could be added as more papers and datasets are published on skin in relation to age/aging and other environmental stresses. Minor changes were made to ensure all cell types were mapped to Cell Ontology or had a parent cell type that mapped to Cell Ontology and genes and proteins were mapped to the Human Gene Ontology (HUGO) Gene Nomenclature Committee (HGNC). New cell types were added to Cell Ontology in this release cycle.

| Label | Value |
| :------------- |:-------------|
| **Creator(s):** | Fiona Ginty; Jonhan Ho; Joel Sunshine; Arivarasan Karunamurthy |
| **Creator ORCID(s):** | [0000-0001-6638-683X](https://orcid.org/0000-0001-6638-683X); [0000-0002-1134-8585](https://orcid.org/0000-0002-1134-8585); [0000-0001-9987-6712](https://orcid.org/0000-0001-9987-6712); [0000-0002-5739-4923](https://orcid.org/0000-0002-5739-4923) |
| **Project Lead:** | Katy B&ouml;rner |
| **Project Lead ORCID:** | [0000-0002-3321-6137](https://orcid.org/0000-0002-3321-6137) |
| **Reviewer(s):** | Lou Falo; Muzlifah A. Haniffa; Hemali Phatnani; David M. Owens; Ellen M. Quardokus   |
| **Reviewer ORCID(s):** | [0000-0001-9813-0433](https://orcid.org/0000-0001-9813-0433); [0000-0002-3927-2084](https://orcid.org/0000-0002-3927-2084); [0000-0002-6571-3891](https://orcid.org/0000-0002-6571-3891); [0000-0003-0297-4370](https://orcid.org/0000-0003-0297-4370); [0000-0001-7655-4833](https://orcid.org/0000-0001-7655-4833) |
| **Creation Date:** | 2023-12-15 |
| **License:** | Creative Commons Attribution 4.0 International ([CC BY 4.0](https://creativecommons.org/licenses/by/4.0/)) |
| **Publisher:** | HuBMAP |
| **Funder:** | National Institutes of Health |
| **Award Number:** |5UH3CA246594-02, OT2OD033756 and OT2OD026671 |
| **HuBMAP ID:** | HBM785.XBPB.444 |
| **Data Table:** | [Skin v1.3](https://cdn.humanatlas.io/hra-releases/v2.0/asct-b/asct-b-vh-skin.csv)  |
| **DOI:** | [https://doi.org/10.48539/HBM785.XBPB.444](https://doi.org/10.48539/HBM785.XBPB.444) |
| **How to Cite This Data Table:** | Fiona Ginty; Jonhan Ho; Joel Sunshine; Arivarasan Karunamurthy, HuBMAP ASCT+B Tables. Skin v1.3 [https://doi.org/10.48539/HBM785.XBPB.444](https://doi.org/10.48539/HBM785.XBPB.444).|
| **How to Cite ASCT+B Tables Overall:** | Quardokus, Ellen, Bruce W. Herr II, Lisel Record, Katy B&ouml;rner. 2023. [*HuBMAP ASCT+B Tables*](https://humanatlas.io/asctb-tables). Accessed on December 15, 2023. |
